--- a/index.html
+++ b/index.html
@@ -43,6 +43,26 @@
     </div>
   </nav>
 
+  <section id="showcase" class="py-5">
+    <div class="primary-overlay text-white">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6 text-cetner">
+            <h1 class="display-2 mt-5 pt5">Do what you dream Of...</h1>
+            <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus adipisci quo quasi ipsum ipsa nisi soluta
+              odio voluptatum rem quibusdam!</p>
+            <a href="#" class="btn btn-oputline-secondary btn-lg text-white">
+              <i class="fas fa-arrow -rgiht"></i>
+            </a>
+          </div>
+          <div class="col-lg-6">
+            <img src="img/book.png" alt="" class="img-fluid d-none d-lg-block">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
 
   <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
