--- a/index.html
+++ b/index.html
@@ -78,6 +78,73 @@
       </div>
     </div>
   </section>
+  <section id="about" class="py-5 text-center bg-ligh">
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <div class="infor-header mb-5">
+            <h1 class="text-primary pb-3">
+              Why this Book?
+            </h1>
+            <p class="lead p-3">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste quibusdam excepturi laborum aspernatur eum adipisci hic obcaecati
+              rem laboriosam a.
+            </p>
+          </div>
+          <div id="accordion">
+            <div class="card">
+              <div class="card-header">
+                <h5 class="mb-0">
+                  <div href="#collapse1" data-toggle="collapse" data-parent="#accordion">
+                    <i class="fas fa-arrow-circle-down"></i> Get Inspired
+                  </div>
+                </h5>
+              </div>
+              <div id="collapse1" class="collapse show">
+                <div class="card-body">
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum fuga possimus facilis harum et in exercitationem sint,
+                  quos nulla eveniet eius odit consequatur repudiandae est aut. Perferendis velit officiis ad maxime saepe,
+                  laudantium voluptatum, minima ipsa cumque hic, ea totam?
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-header">
+                <h5 class="mb-0">
+                  <div href="#collapse2" data-toggle="collapse" data-parent="#accordion">
+                    <i class="fas fa-arrow-circle-down"></i> Get Inspired
+                  </div>
+                </h5>
+              </div>
+              <div id="collapse2" class="collapse show">
+                <div class="card-body">
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum fuga possimus facilis harum et in exercitationem sint,
+                  quos nulla eveniet eius odit consequatur repudiandae est aut. Perferendis velit officiis ad maxime saepe,
+                  laudantium voluptatum, minima ipsa cumque hic, ea totam?
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-header">
+                <h5 class="mb-0">
+                  <div href="#collapse3" data-toggle="collapse" data-parent="#accordion">
+                    <i class="fas fa-arrow-circle-down"></i> Get Inspired
+                  </div>
+                </h5>
+              </div>
+              <div id="collapse3" class="collapse show">
+                <div class="card-body">
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum fuga possimus facilis harum et in exercitationem sint,
+                  quos nulla eveniet eius odit consequatur repudiandae est aut. Perferendis velit officiis ad maxime saepe,
+                  laudantium voluptatum, minima ipsa cumque hic, ea totam?
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
 
   <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
