Added Authors section

--- a/index.html
+++ b/index.html
@@ -146,6 +146,57 @@
     </div>
   </section>
 
+  <section id="authors" class="my-5 text-center">
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <div class="info-header mb-5">
+            <h1 class="text-primary pb-3">
+              Meet the Authors
+            </h1>
+            <p class="lead">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum eos rem odit culpa deleniti ea dolores blanditiis, mollitia
+              incidunt sequi eum vel consequuntur sint harum facilis? Aliquam laborum amet ullam!
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-3 col-md-6">
+        <div class="card">
+          <div class="card-body">
+            <img src="img/person1.jpg" alt="">.img-fluid.rounded-circle.w50.mb-3
+            <h3>Susan William</h3>
+            <h5 class="text-muted">
+              Lead writer
+            </h5>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere vero odio fugiat eaque obcaecati illum quos
+              laborum unde necessitatibus optio, consequatur, corporis voluptas vitae tempore nisi quae consequuntur pariatur
+              officiis.</p>
+            <div class="d-flex justify-content-center">
+              <div class="p-4">
+                <a href="http://facebook.com">
+                  <i class="fab fa-facebook"></i>
+                </a>
+              </div>
+              <div class="p-4">
+                <a href="http://twitter.com">
+                  <i class="fab fa-twitter"></i>
+                </a>
+              </div>
+              <div class="p-4">
+                <a href="http://instagram.com">
+                  <i class="fab fa-instagram"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
 
   <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
